Light/dark mode fixes

--- a/assets/css/darkmode.scss
+++ b/assets/css/darkmode.scss
@@ -1,5 +1,4 @@
 @media (prefers-color-scheme: dark) {
-
   body {
     background-color: #1a1a1a;
     color: #f8f8f2;
@@ -34,6 +33,11 @@
       background: #333;
     }
 
+  }
+
+  input[type=submit],
+  button {
+    color: #f8f8f2;
   }
 
 }
